# codal-stm32-STEAM32_WB55RG

./: CMakeLists.txt  LICENSE  README.md  target-locked.json  target.json
.github/workflows/: codal-buildpr.yml  codal-buildtarget.yml
inc/: localconf.h
model/: STEAM32_WB55RG.cpp  STEAM32_WB55RG.h  STEAM32_WB55RG_IO.cpp  STEAM32_WB55RG_IO.h  STM32STEAM32_WB55RG.cpp  STM32STEAM32_WB55RG.h  STM32STEAM32_WB55RG_IO.cpp  STM32STEAM32_WB55RG_IO.h  STeaMi.cpp  STeaMi.h  STeaMiIO.cpp  STeaMiIO.h
samples/: main.cpp
samples/BLE/BLE_Broadcast/: BLE_Broadcast_Sample.cpp  BLE_Broadcast_Sample.h
samples/Basic/Blink/: BlinkSample.cpp  BlinkSample.h
samples/Basic/Buttons/: ButtonSample.cpp  ButtonSample.h
samples/Basic/ScannerI2C/: ScannerI2C.cpp  ScannerI2C.h
samples/Basic/Serial/: SerialSample.cpp  SerialSample.h
samples/Basic/SingleWireSerial/: SingleWireSerialSample.cpp  SingleWireSerialSample.h
samples/Demo/: demo_sample.cpp  demo_sample.h
samples/Display/OLED_SSD1327/: OLED_SSD1327.cpp  OLED_SSD1327.h
samples/OOB/: buzzer.h  compass.h  oob.cpp  oob.h  utils.h
samples/Peripherals/APDS9960/: APDS9960_sample.cpp  APDS9960_sample.h
samples/Peripherals/BQ27441/: BQ27441_sample.cpp  BQ27441_sample.h
samples/Peripherals/DapLink_Flash/: DapLink_Flash_sample.cpp  DapLink_Flash_sample.h
samples/Peripherals/FUS_WS_Operator/: FUS_WS_Operator.cpp  FUS_WS_Operator.h
samples/Peripherals/HTS221/: HTS221_sample.cpp  HTS221_sample.h
samples/Peripherals/RTC/: RTC_sample.cpp  RTC_sample.h
samples/Peripherals/SAI/: SAI_sample.cpp  SAI_sample.h
samples/Peripherals/VL53L1X/: VL53L1X_sample.cpp  VL53L1X_sample.h
samples/Peripherals/WSEN-PADS/: WSEN-PADS_sample.cpp  (+1 more)
scripts/: flash.sh  gdb.sh  openocd.cfg  openocd_daplink.cfg
